--- a/tampilan1_1.html
+++ b/tampilan1_1.html
@@ -14,7 +14,7 @@
             <label >ID :</label><input type="text" name ="id"/>
         </div>
         <div >
-            <label  >Nama :</label><input type="text" name="nama"/>
+            <label  >asasasas :</label><input type="text" name="nama"/>
         </div>
         <div>
             <label >Alamat :</label><input type="text" name = "alamat">
