--- a/tampilan1_1.html
+++ b/tampilan1_1.html
@@ -20,7 +20,7 @@
             <label >Alamat :</label><input type="text" name = "alamat">
         </div>
         <div>
-            <label >Nama Jalan :</label><input type="text" name = "jalan">
+            <label >Nama jln :</label><input type="text" name = "jalan">
         </div>
         <div >
             <label >Nomor Telpon :</label><input type="text" name="hp"/>
